--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         "vue-tsc": "^2.2.4"
     },
     "dependencies": {
+        "@google/genai": "^0.12.0",
         "@inertiajs/vue3": "^2.0.0",
+        "@pinecone-database/pinecone": "^5.1.2",
         "@tailwindcss/vite": "^4.1.5",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vueuse/core": "^12.8.2",
